<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_title"
            android:textSize="30sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_input"
            />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            />

        <TextView
            style="@style/QuestionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one_content"
            />

        <CheckBox
            style="@style/CheckBoxes"
            android:id="@+id/question_one_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_one_a"
            />

        <CheckBox
            style="@style/CheckBoxes"
            android:id="@+id/question_one_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_one_b"
            />

        <CheckBox
            style="@style/CheckBoxes"
            android:id="@+id/question_one_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_one_c"
            />

        <CheckBox
            style="@style/CheckBoxes"
            android:id="@+id/question_one_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_one_d"
            />

        <CheckBox
            style="@style/CheckBoxes"
            android:id="@+id/question_one_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_one_e"
            />

        <TextView
            style="@style/QuestionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_two"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_two_content"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/question_two_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two_a"
                />
            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/question_two_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two_b"
                />
            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/question_two_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two_c"
                />
            <RadioButton
                style="@style/RadioButtons"
                android:id="@+id/question_two_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two_d"
                />
        </RadioGroup>

        <TextView
            style="@style/QuestionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_three"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_three_content"
            />

        <EditText
            android:id="@+id/question_three_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_three_hint"
            />

        <TextView
            style="@style/QuestionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_four"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_four_content"
            />

        <EditText
            android:id="@+id/question_four_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_four_hint"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:onClick="submitAnswers"
            />

    </LinearLayout>
</ScrollView>